# ifly-spark-agent-mcp

./: .gitignore  README.en.md  README.md  agent.py  pyproject.toml  server.py
mcp_server/: agent.py  server.py
mcp_server/test/: test_agent.py
src/mcp_server/: agent.py  server.py
src/test/: test_agent.py
