[project]
name = "ifly-spark-agent-mcp"
version = "0.1.0"
description = "This a simple implementation of an MCP server using iFlytek SparkAgent. It enables calling iFlytek workflows through MCP tools."
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "websocket-client==1.8.0",
]

[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project.scripts]
ifly_spark_agent_mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]